fixing horizontal overflow issue

--- a/UI/src/app/main/modules/translation/translation-text/translation-preview.component.css
+++ b/UI/src/app/main/modules/translation/translation-text/translation-preview.component.css
@@ -6,6 +6,7 @@
     border-width: 1px;
     width: 99%;
     text-align: center;
+    overflow-x: hidden;
 }
 
 .div-translation-vote {
